k8s/04_fortend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: cms-fortend-svc
  namespace: cms-ns
spec:
  selector:
    app: cms-fortend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
