k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-ingress
  namespace: cms-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "64.227.169.144.nip.io"
    http:
      paths:
    
      - path: /server(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cms-svc
            port:
              number: 3000
    
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cms-fortend-svc
            port:
              number: 80
